# MCP-Virtual-Audio-Player

./: .gitignore  README.md  pyproject.toml
config/: audio_playback_config.example.json
src/audio_playback_server/: __init__.py  __main__.py  config.py  manager.py  server.py
src/audio_playback_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
